feat: 既にセッションに入っている場合にエラーとする
